Package: listenv
================

Version: 0.3.0-9000 [2015-08-03]
o CONSISTENCY: Assigning NULL now removes element just as lists,
  e.g. x$a <- NULL.  To assign value NULL, use x['a'] <- NULL.
o Add [<- assignment, e.g. x['a'] <- 1 and x[2:3] <- c(3,8).
o CLEANUP: Dropped stray debug code.


Version: 0.3.0 [2015-05-23]
o Package no longer depends on other packages.


Version: 0.2.4 [2015-05-22]
o Added helper function parse_env_subset().


Version: 0.2.3 [2015-05-21]
o print() on listenv() handles empty and no-named listenv:s better.


Version: 0.2.2 [2015-05-20]
o Now listenv(length=...) always allocates internal variables.


Version: 0.2.1 [2015-05-19]
o get_variable() gained argument 'mustExist'.


Version: 0.2.0 [2015-05-19]
o Moved list environments from an in-house package to its own package.


Version: 0.1.4 [2015-05-02]
o Added print() for listenv:s.
o CLEANUP: Using tempvar() of R.utils.


Version: 0.1.0 [2015-02-07]
o Created.